--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
                             </div>
-                            <p class="m-0">&copy; All Rights Reserved. Designed by <a href="" class="text-btn">Musa Jibril</a></p>
+                            <p class="m-0">&copy; All Rights Reserved. Designed by <a href="" class="text-info">Musa Jibril</a></p>
                         </div>
                     </section>
                     <!-- Footer End -->
