added new project

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1 class="text-info mt-2">Musa Jibril</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
-                        <div class="typed-text d-none">Mobile Developer, Web Developer, Front End Developer, Backend
+                        <div class="typed-text d-none">Software Developer, Mobile Developer, Front End Developer, Backend
                             Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
@@ -72,17 +72,12 @@
                 <!-- About Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5 text-info">About Me</h1>
-                    <p>I'm Musa, also know as "Musjib." I'm a mobile developer, and i specialize in Flutter that works
-                        on multiple platform such as Android, IOS, Desktop and Web. I care deeply about bulding mobile
-                        apps which is useful and pleasant to most people.
-                        <br><br>My whole life has been driven by my passion for mobile development. I started creating
-                        amazing application as a high-school kid and then evolved my skill to mobile development which i
-                        developed a mobile application for my faculty. For three years, i've worked with numerous
-                        companies and clients which i worked with different teams. I am among the founders of a startup
-                        named "Geeksaxis". I was able to develop an app(PastQ) that's used by hundreds of students
-                        across Nigeria, which i was able to complete in just under 2 months.
-                        <br><br>Right now, I'm excited about building complex softwares using flutter, and i am working
-                        towards becoming a Senior mobile developer. I also plan to explore other aspects of technology
+                    <p>I'm Musa, also know as "Musjib." I'm a software developer. I specialize in mobile development using flutter technology that works on multiple platform such as Android, IOS, Desktop and Web. I care deeply about bulding mobile apps which is useful and pleasant to most people.
+                        I also specialize in backend development using nodejs in creating scalable and reliable servers.
+                    
+                        My whole life has been driven by my passion for software development. I started creating amazing application as a high-school kid and then evolved my skill to mobile development which i developed a mobile application for my faculty. For three years, i've worked with numerous companies and clients which i worked with different teams. I am among the founders of a startup named "Geeksaxis". I was able to develop an app(PastQ) that's used by hundreds of students across Nigeria, which i was able to complete in just under 2 months.
+                        
+                        Right now, I'm excited about building complex softwares and i am working towards becoming a Senior software engineer. I also plan to explore other aspects of technology in order to build good solutions that will help humanity in general.pects of technology
                         in order to build good solutions that will help humanity in general.
                     </p>
                     <div class="row mb-4">
@@ -96,7 +91,7 @@
                             <span class="fw-medium text-info">Experience:</span> 3 Years
                         </div>
                         <div class="col-sm-6 py-1">
-                            <span class="fw-medium text-info">Phone:</span> +2349128433077
+                            <span class="fw-medium text-info">Phone:</span> +2348133144851
                         </div>
                         <div class="col-sm-6 py-1">
                             <span class="fw-medium text-info">Email:</span> musjib999@gmail.com
@@ -172,11 +167,21 @@
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <p class="mb-2">Firebase</p>
+                                    <p class="mb-2">90%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90"
+                                        aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="skill mb-4">
+                                <div class="d-flex justify-content-between">
+                                    <p class="mb-2">Web3</p>
                                     <p class="mb-2">85%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85"
-                                        aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85"
+                                        aria-valuemin="0" aria-valuemax="100" style="background-color: #6D47FF;"></div>
                                 </div>
                             </div>
                         </div>
@@ -184,16 +189,16 @@
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <p class="mb-2">Nodejs</p>
-                                    <p class="mb-2">75%</p>
+                                    <p class="mb-2">90%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="75"
+                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <p class="mb-2">HTML</p>
+                                    <p class="mb-2">Express</p>
                                     <p class="mb-2">95%</p>
                                 </div>
                                 <div class="progress">
@@ -203,7 +208,7 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <p class="mb-2">CSS</p>
+                                    <p class="mb-2">Mongodb</p>
                                     <p class="mb-2">90%</p>
                                 </div>
                                 <div class="progress">
@@ -225,7 +230,7 @@
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
                                 style="top: -5px; left: -50px;"></span>
                             <h5 class="mb-1">Mobile Developer</h5>
-                            <p class="mb-2">Lexington Technologies Company | <small>2019 - Date</small></p>
+                            <p class="mb-2">Lexington Technologies Company | <small>2020 - Date</small></p>
                             <p>I worked at the above company as a mobile developer which i worked with team in building
                                 tech solutions such as NARR</p>
                         </div>
@@ -242,7 +247,7 @@
                                 style="top: -5px; left: -50px;"></span>
                             <h5 class="mb-1">Flutter Developer</h5>
                             <p class="mb-2">Geeksaxis | <small>2019 - Date</small></p>
-                            <p>Woring as Director Research &amp; Innovation and as a flutter developer which we
+                            <p>Working as Director Research &amp; Innovation and as a flutter developer which we
                                 developed amazing projects like PastQ, RescureMe and so on.</p>
                         </div>
                     </div>
@@ -315,8 +320,8 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <h4>Mobile Application</h4>
-                                        <p>PastQ</p>
+                                        <h4>PastQ</h4>
+                                        <p>A past examination question app</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-4 portfolio-item">
@@ -325,14 +330,14 @@
                                             <img class="img-fluid w-100" src="img/portfolio-2.png" alt="">
                                         </div>
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                            <a href="https://github.com/musjib999/food_dev">
+                                            <a href="https://play.google.com/store/apps/details?id=com.hucxs.app">
                                                 <i class="bi bi-link text-light"></i>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <h4>Mobile Application</h4>
-                                        <p>Food Dev</p>
+                                        <h4>Hucxs Defi Wallet</h4>
+                                        <p>A solana defi wallet application</p>
                                     </div>
                                 </div>
 
