--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
                         <div class="position-relative mb-4">
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
                                 style="top: -5px; left: -50px;"></span>
+                            <h5 class="mb-1">Software Developer</h5>
+                            <p class="mb-2">Hucxs Defi <small>2022</small></p>
+                            <p>I worked at the above company as a software developer which i developed a Solana defi wallet app called "HUXCS"</p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <span class="bi bi-arrow-right fs-4 text-light position-absolute"
+                                style="top: -5px; left: -50px;"></span>
                             <h5 class="mb-1">Mobile Developer</h5>
                             <p class="mb-2">Lexington Technologies Company | <small>2020 - Date</small></p>
                             <p>I worked at the above company as a mobile developer which i worked with team in building
@@ -323,6 +330,10 @@
                                         <h4>PastQ</h4>
                                         <p>A past examination question app</p>
                                     </div>
+                                    <div class="col-md-6">
+                                        <img src="./img/flutter.png" width="30px" />
+                                        <img src="./img/firebase.png" width="30px" />
+                                    </div>
                                 </div>
                                 <div class="col-md-6 mb-4 portfolio-item">
                                     <div class="position-relative overflow-hidden mb-2">
@@ -330,7 +341,7 @@
                                             <img class="img-fluid w-100" src="img/portfolio-2.png" alt="">
                                         </div>
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                            <a href="https://play.google.com/store/apps/details?id=com.hucxs.app">
+                                            <a href="https://play.google.com/store/apps/details?id=com.hucxs.defi.app">
                                                 <i class="bi bi-link text-light"></i>
                                             </a>
                                         </div>
@@ -338,6 +349,12 @@
                                     <div class="col-md-6">
                                         <h4>Hucxs Defi Wallet</h4>
                                         <p>A solana defi wallet application</p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="./img/flutter.png" width="30px" />
+                                        <img src="./img/firebase.png" width="30px" />
+                                        <img src="./img/nodejs.png" width="30px" />
+                                        <img src="./img/ts.png" width="30px" />
                                     </div>
                                 </div>
 
@@ -348,7 +365,7 @@
                 <!-- Portfolio End -->
 
                 <!-- Testimonial Start -->
-                <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 30px;">
                     <h1 class="title pb-3 mb-5">Testimonial</h1>
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-left">
@@ -409,7 +426,7 @@
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="email" class="form-control border-0 bg-secondary" id="email"
-                                        placeholder="Your Email" onkeydown="sendEmail()">
+                                        placeholder="Your Email">
                                     <label for="email">Your Email</label>
                                 </div>
                             </div>
@@ -429,13 +446,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <a href="mailto:musjib999@gmail.com?subject=Hello"><button class="btn btn-info w-100 py-3" type="submit">Send
+                                <a href="mailto:musjib999@gmail.com?cc=subject=Hello"><button class="btn btn-info w-100 py-3" onclick="sendEmail()" type="submit">Send
                                         Message</button></a>
                             </div>
                         </div>
                     </form>
-                </section>
-                Contact End -->
+                </section> -->
+                <!-- Contact End -->
 
                 <!-- Footer Start -->
                 <section class="wow fadeIn" data-wow-delay="0.1s">
@@ -476,7 +493,6 @@
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
